--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-#VITE_BE_API_URL=http://localhost:8080/api/v1/
-VITE_BE_API_URL=https://duongdt.tplinkdns.com/api/v1
+VITE_BE_API_URL=http://localhost:8080/api/v1/
+#VITE_BE_API_URL=https://duongdt.tplinkdns.com/api/v1
+VITE_WS_URL=${VITE_BE_API_URL}/ws-order
