--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#VITE_BE_API_URL=http://localhost:8080/api/v1/
+#VITE_BE_API_URL=http://localhost:8080/api/v1
 #VITE_BE_API_URL=https://duongdt.tplinkdns.com/api/v1
 VITE_BE_API_URL=https://manaya.online/api/v1
 
